[package]
name = "lastz_auto_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Tìm kiếm PID và dòng lệnh của tiến trình
sysinfo = "0.30"
# Xử lý các đối số dòng lệnh dễ dàng
clap = { version = "4.5", features = ["derive"] }
# Tương tác với Windows API
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
] }