[package]
name = "lastz_auto_host"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
clap = { version = "4.5", features = ["derive"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
] }
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
